# YapTeX

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: cli.md  develop.md  installation.md  main.md  utils.md  variables.md
docs/directives/: copy.md  define.md  if.md  ifs.md  include.md  inclusion.md  increment.md  messages.md  pagebreak.md  region.md  section.md  set.md  varops.md  warning.md
scripts/: apply.bat  apply.sh  build-readme.bat  build-readme.sh  build.sh  run-tests.bat  run-tests.sh
src/: directives.py  engine.py  log.py  main.py  renderers.py
src/yaptex/: __init__.py  __main__.py  cli.py  directives.py  engine.py  errors.py  expressions.py  fonts.py  log.py  renderers.py  structures.py  utils.py  vectorizer.py
src/yaptex/directives/: __init__.py  defines.py  files.py  ifs.py  messages.py  regions.py  variables.py
src/yaptex/renderers/: __init__.py  html.py  md.py  pdf.py
src/yaptex/res/font/: .gitignore
tests/: __init__.py  define.md  defines.md  header.md  if.md  ifs.md  include.md  line.md  raw  test_engine.py  variables.md
tests/resources/expected/: heading.md  include.md  line.md  macros.md  undef.md  variables.md
tests/resources/expected/ifs/: both.md  none.md  primary.md  secondary.md
tests/resources/source/: bad_else.md  bad_if.md  bad_macro.md  heading.md  ifs.md  macros.md  undef.md  variables.md
yapper/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
yapper/snippets/: yaptex.json
yapper/src/: extension.ts  foldingRangeProviders.ts
yapper/syntaxes/: yaptex.json
(+9 files in other folders)
