[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "YapTeX"
version = "0.1.0"
description = "Markdown and plain text preprocessor."
authors = [
  { name="Zexyp", email="placeholder@localhost.cz" },
]
requires-python = ">=3.11"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Zexyp/YapTeX"
Issues = "https://github.com/Zexyp/YapTeX/issues"

[project.scripts]
yaptex = "yaptex.__main__:main"
yaptex-font = "yaptex.cli:font"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
